[build-system]
requires = ["scikit-build-core >=0.4.3", "scipy", "numpy", "scikit-learn"]
build-backend = "scikit_build_core.build"

[project]
name = "xGPR"
version = "0.4.7"
description = "Efficient approximate Bayesian machine learning"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jonathan Parkinson", email = "jlparkinson1@gmail.com" },
]
license = {file = "LICENSE"}
keywords = ["xGPR", "gaussian process", "Gaussian process",
           "Gaussian process regression", "random Fourier features",
           "approximate GP", "GP", "machine learning", "Bayesian ML",
           "random features"]


[project.urls]
Homepage = "https://github.com/jlparki/xGPR"
Documentation = "https://xgpr.readthedocs.io/en/latest/"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.8"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
logging.level = "INFO"
wheel.py-api = "cp312"
cmake.verbose = true
cmake.version = ">=3.18"

# IMPORTANT: If debugging, uncomment BOTH of the following lines.
# This build backend automatically strips unless install.strip is
# set to false, so that even if build-type is set to debug,
# the symbols will be stripped.
#cmake.build-type = "Debug"
#install.strip = false

cmake.build-type = "Release"
